--- a/dbprop-dev.properties
+++ b/dbprop-dev.properties
@@ -1,3 +1,11 @@
 devmysql:poojavarmaaa
 usernamedev:pooooooooooooooo
 passworddev:126656565
+
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.lease.duration=5
+
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
