--- a/dbprop-dev.properties
+++ b/dbprop-dev.properties
@@ -1,5 +1,5 @@
-devmysql:poojavarmaaaaaaaaaaaaaaaa
-usernamedev:pooooooooooooooo
+devmysql:mysql
+usernamedev:poooooooooo
 passworddev:126656565
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 eureka.client.lease.duration=5
