--- a/dbprop-dev.properties
+++ b/dbprop-dev.properties
@@ -2,7 +2,16 @@ devmysql:mysql
 usernamedev:poooooooooo
 passworddev:126656565
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
-eureka.client.lease.duration=5
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.lease.duration= 5
+eureka.client.register-with-eureka= true
+eureka.client.fetch-registry= true
+eureka.client.registryFetchIntervalSeconds= 30
+eureka.instance.instance-id=${spring.application.name}:${server.port}
+eureka.client.service-url.defaultZone=${vcap.services.eureka.credential.url}/eureka/
+eureka.instance.nonSecurePort=80
+eureka.instance.hostname=${vcap.application.uris[0]}
+eureka.instance.leaseRenewalIntervalInSeconds= 10
+eureka.instance.leaseExpirationInSeconds= 10
 
+
+https://blog.novatec-gmbh.de/service-discovery-eureka-cloud-foundry/
